--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="bar"></div>
         </div>
         <div class="logo-holder">
-            <img src="/dotsonlogo.jpg" alt="Dotson Detailing">
+            <img src="dotsonlogo.jpg" alt="Dotson Detailing">
         </div>
         <div class="nav-items-holder">
             <ul class="nav-items">
@@ -67,7 +67,7 @@
     </div>    
     <section class="section-1">
         <div class="hero-img">
-            <img src="/maincar.jpg" alt="#" class="main-car">
+            <img src="maincar.jpg" alt="#" class="main-car">
             <div class="slogan-text">
                 <span class="word-1">EVERY</span>
                 <span class="word-2">DETAIL</span>
@@ -106,11 +106,11 @@
             </div>
             <div class="right-side-services">
                 <div class="img">
-                    <img id="detailing" src="/detailing.jpg" alt="Detailing">
-                    <img id="car" src="/car.jpg" alt="Car">
-                    <img id="truck" src="/truck.jpg" alt="Truck">
-                    <img id="carinterior" src="/carinterior.jpg" alt="Car Interior">
-                    <img id="truckinterior" src="/truck interior.jpg" alt="Truck Interior">
+                    <img id="detailing" src="detailing.jpg" alt="Detailing">
+                    <img id="car" src="car.jpg" alt="Car">
+                    <img id="truck" src="truck.jpg" alt="Truck">
+                    <img id="carinterior" src="carinterior.jpg" alt="Car Interior">
+                    <img id="truckinterior" src="truck interior.jpg" alt="Truck Interior">
                 </div>
             </div>
         </div>
