--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>    
     <section class="section-1">
         <div class="hero-img">
-            <!-- <img src="maincar.jpg" alt="#" class="main-car"> -->
+            <img src="maincar.jpg" alt="#" class="main-car">
             <div class="slogan-text">
                 <span class="word-1">EVERY</span>
                 <span class="word-2">DETAIL</span>
