--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="nav-items-holder">
             <ul class="nav-items">
-                <li><a href="#" class="selected">Home</a></li>
+                <!-- <li><a href="#" class="selected">Home</a></li> -->
                 <li><a href="#" id="services-item">Services</a></li>
                 <!-- <li><a href="#">About Us</a></li> -->
                 <li><button class="contact-button" id="contact-button">Contact Us</button></li>
@@ -33,7 +33,7 @@
     <div class="slide-menu">
         <div class="exit-icon">&times;</div>
         <ul class="slide-nav-items">
-            <li><a href="#" class="selected">Home</a></li>
+            <!-- <li><a href="#" class="selected">Home</a></li> -->
             <li><a href="#" id="services-item">Services</a></li>
             <li><a href="tel:4695002909" id="call">Contact Us: <br>(469) 500-2909</a></li>
         </ul>
@@ -101,6 +101,12 @@
                     <img id="truckinterior" src="truck interior.jpg" alt="Truck Interior">
                 </div>
             </div>
+        </div>
+    </section>
+    <section id="about" class="container">
+        <h2>About Us</h2>
+        <div id="about-us">
+          <p>We are a mobile detailing company striving for perfecting by providing top of the line service at the convenience of coming to you! We genuinely enjoy taking care of each and every sing once of our customers while providing high quality services!</p>
         </div>
     </section>
 <script src="app.js"></script>    
